data/derived/comb/progs/unify/prog0747.ml.out
Characters 56-69:
  | h::t -> listReverse t ::h;;
            ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
